[gd_scene load_steps=5 format=3 uid="uid://bjvcii02gslih"]

[ext_resource type="Texture2D" uid="uid://bqwv88bgwj8ru" path="res://Project/Environment/slot.svg" id="1_nx4jm"]
[ext_resource type="Script" path="res://Project/%Scripts/slot.gd" id="1_y4x6x"]
[ext_resource type="Texture2D" uid="uid://ysyrdui33o57" path="res://Project/Environment/shadow.svg" id="3_qnduf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nkjhv"]
size = Vector2(120, 200)

[node name="Slot" type="Area2D" groups=["slot"]]
script = ExtResource("1_y4x6x")

[node name="Base" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.498039)
texture = ExtResource("1_nx4jm")

[node name="Shadow" type="Sprite2D" parent="Base"]
modulate = Color(1, 1, 1, 0.2)
position = Vector2(2.08165e-12, 10)
texture = ExtResource("3_qnduf")

[node name="Sprite" type="Sprite2D" parent="."]
offset = Vector2(2.08165e-12, -50)

[node name="Collider" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("RectangleShape2D_nkjhv")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
